--- a/final report.tex
+++ b/final report.tex
@@ -1079,14 +1079,22 @@ This result is also very logical. When informators are not payed we should use t
 
 Having the shown result we tried to use it. To use the function \ref{fig:varPredDifRho} to find the desired $k$ which minimizes the error we need to define parameter $\rho$. What we tried is to take as $\rho$ the average correlation between the immediate neighbors when the graph and the values on its nodes are given.
 
-However, the suggested $k$ did not coincide with the $k$ found with the experimentations. In the scenario when values $Y_1, Y_2, ..., Y_n$ have correlation $corr(Y_i, Y_{i+h}) = \rho^h$. However when we walk on the graph the values $Y_1$ and $Y_100$ can appear to be of the immediate neighbors. And when in reality the values of the corresponding nodes can be pretty much correlated, according to the geometrical model their correlation is so small that can be neglected.
+However, the suggested $k$ did not coincide with the $k$ found with the experimentations. The explanation could be following. 
+
+We that the values $Y_1, Y_2, ..., Y_n$ have correlation $corr(Y_i, Y_{i+h}) = \rho^h$. Correlation between values $Y_1, Y_101$ is of the power 100. However when we walk on the graph the values $Y_1$ and $Y_{101}$ can appear to be of the immediate neighbors. And when in reality the values of the corresponding nodes can be pretty much correlated, according to the geometrical model their correlation is so small that can be neglected.
+
+The correlation between values is underestimated, except for the correlation of the two consecutive samples $Y_i, Y_{i+1}$. Therefore the correlation factor and its influence are underestimated. And when in reality skipping one more value would significantly reduce correlation, in the model it can be different.
 
 \myworries{put picture where is suggested k with this method does not coinc with exper results !!! the one with facebook}
 
-Therefore, the model is too easy to use. In the next section we will generalize it on any graph with any values.
+Therefore, the model is too simplified to use. In the next section we will generalize it on any graph with any values. However, knowing that the result from the model is underestimated, it can give us the \textit{minimal} number of node to skip. And the result may not be the best possible, but comparing to the standard scenario has lower error.
 \subsection{General case}
 
-In the previous example we were able to write the variance of the estimator because the correlation between all the collected samples was known. We would like to generalize formula: where RDS is random walk on the arbitrary graph.
+Due to the fact that the correlation between samples was oversimplified the results of geometric model were not exactly the same that in reality. This results could give us the lower bound on the value $k$, but we wanted to find it precisely. 
+
+In the previous example we were able to write the variance of the estimator because the correlation between all the random samples was known. 
+
+So our first goal is to generalize formula for the variance of the estimator when the values $Y_1, Y_2, ..., Y_n$ are collected with the random walk on the graph.
 
 Let $f = {f_1 , f_2, ..., f_n}$ be the values of the attribute on the nodes $1, 2, ..., n$.
 First, let $P$ be the transition matrix of the random walk. We consider that probability for the individual to choose any of his friend is the same. Therefore, if the random walk visits the node $i$ then one of the neighbors of this node will be chosen with probability $d_i$. Then we can write the transition matrix:
@@ -1125,7 +1133,7 @@ where $<a,b>_c$ is weighted scalar product and if $a = (a_1, ..., a_n), b = (b_1
 
 $$<a,b>_c = \sum_{i = 1}^n a_i b_i c_i$$
 
-To see more, how these formulas were derived, consult 6 chapter of the book \cite{bremaud2013markov}.
+To see, how these formulas were derived, consult 6 chapter of the book \cite{bremaud2013markov}.
 
 For now we can write the formula for the variance of the estimator as:
 
@@ -1177,10 +1185,12 @@ $$MSE(\hat{\mu}_{avg}) = bias(\hat{\mu}_{avg})^2 + var(\hat{\mu}_{avg})$$
 
 \section{Data}
 
-To validate our theoretical results we used different sources of the data. First, we used random graphs with values generated with the algorithm. 
+To validate our theoretical results we performed numerous simulations. For the graph structure with values on the nodes we used different sources of the data. 
+
+First, we used random graphs with values generated with the algorithm. 
 Then we used real network structures like part of Facebook \cite{Facebook}  and assigned values with the algorithm.
 
-The network structures where the nodes have some data are scares. But there are several sources like this: data from the Project 90\cite{Project90}, data from the project Add health\cite{Addhealth}. 
+The real network structures where the nodes have some data are scares. There are just several sources like this. We used data from the Project 90\cite{Project90}, data from the project Add health\cite{Addhealth}. 
 
 \subsection{Data from the Project 90}
 Project 90 \cite{Project90} studied how the network structure influences on the HIV prevalence. Besides the data about social connection the study collected some data about drug user, such as race, gender, whether he/she is sex worker, pimp, sex work client, drug dealer, drug cook, thief, retired, housewife, disabled, unemployed, homeless.
@@ -1274,6 +1284,8 @@ As stated also \cite{goel2010assessing} the advantage to use estimtor1 appears o
 
 The new idea to create network values in such a way that ....
 This is general contribution that makes possible to create ... where we can control and mathematically studying properties that is very important for research purposes.
+
+However, knowing that the result from the model is underestimated, it can give us the \textit{minimal} number of node to skip. And the result may not be the best possible, but comparing to the standard scenario has lower error.
 
 \section{Further study}
 
